@@ -4,6 +4,9 @@
 package com.daml.quickstart.iou;
 
 import com.daml.ledger.javaapi.data.*;
+import com.daml.ledger.javaapi.data.codegen.ContractId;
+import com.daml.ledger.javaapi.data.codegen.Created;
+import com.daml.ledger.javaapi.data.codegen.Update;
 import com.daml.ledger.rxjava.ContractUtil;
 import com.daml.ledger.rxjava.DamlLedgerClient;
 import com.daml.ledger.rxjava.LedgerClient;
@@ -12,7 +15,6 @@ import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
 import com.google.common.collect.Maps;
 import com.google.gson.Gson;
-import com.google.protobuf.Empty;
 import io.reactivex.disposables.Disposable;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -109,9 +111,9 @@ public class IouMain {
         "/iou",
         (req, res) -> {
           Iou iou = g.fromJson(req.body(), Iou.class);
-          CreateCommand iouCreate = iou.create();
-          submit(client, party, iouCreate);
-          return "Iou creation submitted.";
+          Update<Created<ContractId<Iou>>> iouCreate = iou.create();
+          var createdContractId = submit(client, party, iouCreate);
+          return "Iou creation submitted: " + createdContractId;
         },
         g::toJson);
     Spark.post(
@@ -120,10 +122,9 @@ public class IouMain {
         (req, res) -> {
           Map m = g.fromJson(req.body(), Map.class);
           Iou.ContractId contractId = idMap.get(Long.parseLong(req.params("id")));
-          ExerciseCommand exerciseCommand =
-              contractId.exerciseIou_Transfer(m.get("newOwner").toString());
-          submit(client, party, exerciseCommand);
-          return "Iou transfer submitted.";
+          var update = contractId.exerciseIou_Transfer(m.get("newOwner").toString());
+          var result = submit(client, party, update);
+          return "Iou transfer submitted with exercise result: " + result;
         },
         g::toJson);
 
@@ -136,18 +137,16 @@ public class IouMain {
       }
   }
 
-  private static Empty submit(LedgerClient client, String party, Command c) {
+  private static <U> U submit(LedgerClient client, String party, Update<U> update) {
     return client
-        .getCommandSubmissionClient()
-        .submit(
+        .getCommandClient()
+        .submitAndWaitForResult(
             UUID.randomUUID().toString(),
             "IouApp",
             UUID.randomUUID().toString(),
-            party,
-            Optional.empty(),
-            Optional.empty(),
-            Optional.empty(),
-            Collections.singletonList(c))
+            List.of(party),
+            List.of(),
+            update)
         .blockingGet();
   }
 }
